  *) mod_proxy_hcheck: Re-enable workers in standard ERROR state. PR 66302.      [Alessandro Cavaliere <alessandro.cavalier7 unibo.it>]

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1904518 13f79535-47bb-0310-9956-ffa450edef68